--- a/src/shared/ui/overlay/style.module.scss
+++ b/src/shared/ui/overlay/style.module.scss
@@ -1,17 +1,17 @@
 .overlay {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   position: fixed;
   inset: 0;
   width: 100%;
   height: 100vh;
-  background: rgb(5, 5, 5, 0.5);
+  background: rgba(5, 5, 16, 0.16);
   z-index: 100;
 }
 
 .content {
-  width: 100%;
+  width: 400px;
   height: auto;
   animation: view .4s ease;
 }
