--- a/src/widgets/department/ui/style.module.scss
+++ b/src/widgets/department/ui/style.module.scss
@@ -8,6 +8,7 @@
   font-size: 15px;
   color: rgba(151, 151, 155, 1);
   padding: 8px 12px;
+  cursor: pointer;
 }
 .active {
   border-bottom: 2px solid rgba(101, 52, 255, 1);
