--- a/src/pages/details/ui/style.module.scss
+++ b/src/pages/details/ui/style.module.scss
@@ -1,14 +1,71 @@
 .container {
-  padding: 28px 16px 200px;
   overflow-y: auto;
   height: 100vh;
   position: relative;
+  width: 100%;
+}
+.btn {
+  position: absolute;
+  top: 22px;
+  left: 24px;
+}
+.cover {
+  padding: 72px 0 24px;
+  background-color: rgba(247, 247, 248, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.avatar {
+  border-radius: 50%;
 }
 .title {
-  font-size: 20px;
+  margin-top: 24px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+}
+.usertag {
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 22px;
+  color: rgba(151, 151, 155, 1);
+}
+.subtitle {
+  text-transform: capitalize;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+  margin-top: 12px;
+  color: rgba(85, 85, 92, 1);
+}
+.item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  padding: 0 16px;
+}
+.leftside {
+  display: flex;
+  align-items: center;
+}
+.img {
+  margin-right: 12px;
+  width: 24px;
+  height: 24px;
+}
+.text {
   font-weight: 500;
+  font-size: 16px;
   line-height: 20px;
-  text-align: left;
-  color: #f5f5f5;
-  margin-top: 40px;
+  letter-spacing: 0%;
+  vertical-align: bottom;
+}
+.age {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: rgba(151, 151, 155, 1);
 }
