--- a/src/widgets/department/ui/style.module.scss
+++ b/src/widgets/department/ui/style.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   padding: 8px 16px 0;
   border-bottom: 1.5px solid rgba(195, 195, 198, 1);
+  overflow-y: hidden;
+  overflow-x: scroll;
 }
 .item {
   font-weight: 500;
