--- a/src/entities/team/ui/style.module.scss
+++ b/src/entities/team/ui/style.module.scss
@@ -6,3 +6,24 @@
   padding: 16px 16px;
   overflow-x: auto;
 }
+.line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding-block: 24px;
+
+  &::before,
+  &::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: rgba(195, 195, 198, 1);
+  }
+}
+.date {
+  padding: 0 62px;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+}
