--- a/src/entities/user/ui/style.module.scss
+++ b/src/entities/user/ui/style.module.scss
@@ -32,3 +32,11 @@
   color: rgba(151, 151, 155, 1);
   padding-left: 4px;
 }
+.item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 400;
+  font-size: 15px;
+  color: rgba(85, 85, 92, 1);
+}
